# memfree

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  TECH-DEBT.md  decisions.py  install.sh  mem0_facts.py  mem0_server.py  migrate-hot-to-facts.py  pyproject.toml  sync_to_soul.py  test_mem0_facts.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
docs/: architecture.md  comparison.md
src/: __init__.py  facts.py  server.py
web/: web_ui.html
