[project]
name = "memfree"
version = "0.1.0"
description = "🧠 Open-source long-term memory for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Yul", email = "yul@example.com"}]
requires-python = ">=3.10"
keywords = ["ai", "agent", "memory", "long-term-memory", "llm", "openclaw", "hermes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
memfree-facts = "src.cli:main_facts"
memfree-server = "src.server:main"

[project.optional-dependencies]
dev = ["black", "ruff", "pytest"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
